# projets_kuma

./: Makefile  Matches.py  columns.txt  pyproject.toml  requirements.txt
utils/: 06_09_2021_matches_Algeria.xlsx  Nigeria   Equatorial  Guinea.xlsx  stats.py
