[project]
name = "projets-kuma"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "ipython (>=9.4.0,<10.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "mplsoccer (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
